fix: use valid UTF-8 search filter encoding